# rtmp-sample

./: CMakeLists.txt  main.cpp
lib/: librtmp.lib
